=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.5
 - Added: Standardised interface to CMS applications such as joomla, drupal, postnuke, etc. (fisharebest)
 - Fixed: [ 1951591 ] Error in Hebrew Date Editing (fisharebest)
 - Fixed: [ 1951335 ] Privacy Warning on View GEDCOM for Media Even for Admin (fisharebest)
 - Fixed: [ 1950986 ] Remote Link - Person to Person, SVN 2899 (fisharebest)
 - Fixed: [ 1947687 ] [4.1.4] Edit link in Quick Update does not work (fisharebest)
 - Fixed: [ 1946362 ] SVN 2867 - Quick Update Links to wrong GEDCOM (fisharebest)
 - Fixed: [ 1950235 ] SVN2887- Search Bug (fisharebest)
 - Fixed: [ 1950232 ] PGSQL: Syntax-error in functions_db.php (fisharebest)
 - Fixed: FACT/TYPE not being checked for privacy rules when editing raw gedcom (fisharebest)
 - Fixed: [ 1933760 ] SVN 2799 use of function id_type (fisharebest)
 - Fixed: Remove dependencies on record prefixes (fisharebest)
 - Fixed: Extra checks against reusing record IDs (fisharebest)
 - Fixed: [ 1949549 ] GEDCOM Stats block: incorrect block title (canajun2eh)
 - Fixed: Use stats class to calculate stats (fisharebest)
 - Fixed: Stats block counting records from other gedcoms (fisharebest)
 - Fixed: [ 1942593 ] Relationship Chart nth Cousin Calculation Issue (canajun2eh)
 - Fixed: Temp Fix for Lightbox giving errors when Googlemaps not installed (windmillway)
 - Fixed: [ 1944250 ] placelist.php Level Issue On Language Change For Some Themes (canajun2eh)
 - Added: Add "Painting" and "Other" to supported sortable media types on Lightbox-Album page(windmillway)
 - Fixed [ 1941544 ] Yahrzeiten Block in IE7 gives an Error (opus27)
 - Added: Add "Painting" and "Other" to supported media types (canajun2eh)